@eneshamzaj328 | Fix: Too many Re-Renders & Added New Light/Dark mode Styles

--- a/ui/styles/briefme.css
+++ b/ui/styles/briefme.css
@@ -19,7 +19,9 @@ body {
     overflow-x: hidden;
 }
 
-input:focus-visible, select:focus-visible, textarea:focus-visible {
+input:focus-visible,
+select:focus-visible,
+textarea:focus-visible {
     outline: 0;
     transition: all ease-in-out 50ms !important;
     cursor: text !important;
@@ -63,11 +65,11 @@ select {
     left: 0;
     right: 0;
     height: 50px;
-    background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1));
+    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 }
 
 ::-webkit-scrollbar {
-    width: 0; 
+    width: 0;
     background: transparent;
 }
 
